--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -64,65 +64,107 @@
 <body>
 	<div class="ui-guide">
 		<h1>Form</h1>
-		<p>Input Selector</p>
+		<p>Checkbox</p>
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Checkbox <span>Large</span></h2>
+				<h2>Large</h2>
 				<dl>
-					<dt>Default</dt>
+					<dt></dt>
 					<dd>
 						<div class="inp inp-large">
-                            <label><input type="checkbox" name="rad001"></label>
-                            <b>Checkbox</b>
-                        </div>
+							<label>
+								<input type="checkbox" name="rad001">
+								<span class="label-title">텍스트를 입력해주세요</span>
+							</label>
+						</div>
 					</dd>
 					<dd>
 						<div class="inp inp-large">
-                            <label><input type="checkbox" name="rad001"></label>
-                            <b>Checkbox</b>
-                        </div>
+							<label>
+								<input type="checkbox" name="rad001">
+								<span class="label-title">텍스트를 입력해주세요</span>
+								<span class="label-subtitle">서브텍스트를 입력해주세요</span>
+							</label>
+						</div>
+					</dd>
+					<dd>
+						<div class="inp inp-large">
+							<label>
+								<input type="checkbox" name="rad001">
+								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+								<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
+							</label>
+						</div>
 					</dd>
 				</dl>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>Medium</h2>
 				<dl>
-					<dt>Checked</dt>
+					<dt></dt>
 					<dd>
-						<div class="inp inp-large">
-                            <label><input type="checkbox" name="rad002"></label>
-                        </div>
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox" name="rad001">
+								<span class="label-title">텍스트를 입력해주세요</span>
+							</label>
+						</div>
 					</dd>
 					<dd>
-						<div class="inp inp-large">
-                            <label><input type="checkbox" name="rad002"><b>Checkbox</b></label>
-                        </div>
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox" name="rad001">
+								<span class="label-title">텍스트를 입력해주세요</span>
+								<span class="label-subtitle">서브텍스트를 입력해주세요</span>
+							</label>
+						</div>
+					</dd>
+					<dd>
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox" name="rad001">
+								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+								<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
+							</label>
+						</div>
 					</dd>
 				</dl>
 			</div>
 		</div>
 		<hr>
-
-		<div class="ui-guide-section">
-			<div class="ui-guide-box">
-				<h2>Checkbox <span>Medium</span></h2>
-				<dl>
-					<dt>Default</dt>
-					<dd>
-						<label class="inp inp-medium"><input type="checkbox" name="rad001"></label>
-					</dd>
-					<dd>
-						<label class="inp inp-medium"><input type="checkbox" name="rad001"><b>Checkbox</b></label>
-					</dd>
-				</dl>
-				<dl>
-					<dt>Checked</dt>
-					<dd>
-						<label class="inp inp-medium"><input type="checkbox" name="rad002"></label>
-					</dd>
-					<dd>
-						<label class="inp inp-medium"><input type="checkbox" name="rad002"><b>Checkbox</b></label>
-					</dd>
-				</dl>
-			</div>
+		<div class="ui-guide-box">
+			<h2>Small</h2>
+			<dl>
+				<dt></dt>
+				<dd>
+					<div class="inp inp-small">
+						<label>
+							<input type="checkbox" name="rad001">
+							<span class="label-title">텍스트를 입력해주세요</span>
+						</label>
+						<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
+					</div>
+				</dd>
+				<dd>
+					<div class="inp inp-small">
+						<label>
+							<input type="checkbox" name="rad001">
+							<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+						</label>
+						<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
+					</div>
+				</dd>
+				<dd>
+					<div class="inp inp-small">
+						<label>
+							<input type="checkbox" name="rad001">
+							<span class="label-title">텍스트를 입력해주세요</span>
+						</label>
+					</div>
+				</dd>
+			</dl>
 		</div>
 	</div>
 </body>
