--- a/html/components/component_typohraphy.html
+++ b/html/components/component_typohraphy.html
@@ -59,6 +59,13 @@
 	<script src="../../assets/js/ui-script.js"></script>
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
+	<style>
+		.ui-guide .ui-guide-box dl dd {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
+	</style>
 </head>
 
 <body>
