--- a/html/components/component_input_radio.html
+++ b/html/components/component_input_radio.html
@@ -64,36 +64,24 @@
 <body>
 	<div class="ui-guide">
 		<h1>Form</h1>
-		<p>Checkbox</p>
+		<p>Radio</p>
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Large</h2>
+				<h2>Default</h2>
 				<dl>
 					<dt></dt>
 					<dd>
 						<div class="inp inp-large">
 							<label>
-								<input type="checkbox">
+								<input type="radio" name="rad001">
 								<span class="label-title">텍스트를 입력해주세요</span>
 							</label>
 						</div>
-					</dd>
-					<dd>
 						<div class="inp inp-large">
 							<label>
-								<input type="checkbox">
+								<input type="radio" name="rad001">
 								<span class="label-title">텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-large">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
 							</label>
 						</div>
 					</dd>
@@ -101,70 +89,42 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Medium</h2>
+				<h2>Tab</h2>
 				<dl>
-					<dt></dt>
+					<dt>Two Tabs</dt>
 					<dd>
-						<div class="inp inp-medium">
+						<div class="inp inp-tab">
 							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
+								<input type="radio" name="rad002">
+								<span class="label-title">텍스트</span>
+							</label>
+							<label>
+								<input type="radio" name="rad002">
+								<span class="label-title">텍스트텍스트</span>
 							</label>
 						</div>
 					</dd>
+				</dl>
+				<dl>
+					<dt>Three Tabs</dt>
 					<dd>
-						<div class="inp inp-medium">
+						<div class="inp inp-tab">
 							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요</span>
+								<input type="radio" name="rad003">
+								<span class="label-title">텍스트</span>
 							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-medium">
 							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
+								<input type="radio" name="rad003">
+								<span class="label-title">텍스트텍스트</span>
+							</label>
+							<label>
+								<input type="radio" name="rad003">
+								<span class="label-title">텍스트텍스트</span>
 							</label>
 						</div>
 					</dd>
 				</dl>
 			</div>
-		</div>
-		<hr>
-		<div class="ui-guide-box">
-			<h2>Small</h2>
-			<dl>
-				<dt></dt>
-				<dd>
-					<div class="inp inp-small">
-						<label>
-							<input type="checkbox">
-							<span class="label-title">텍스트를 입력해주세요</span>
-						</label>
-						<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
-					</div>
-				</dd>
-				<dd>
-					<div class="inp inp-small">
-						<label>
-							<input type="checkbox">
-							<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-						</label>
-						<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
-					</div>
-				</dd>
-				<dd>
-					<div class="inp inp-small">
-						<label>
-							<input type="checkbox">
-							<span class="label-title">텍스트를 입력해주세요</span>
-						</label>
-					</div>
-				</dd>
-			</dl>
 		</div>
 	</div>
 </body>
