--- a/html/components/component_input_toggle.html
+++ b/html/components/component_input_toggle.html
@@ -64,54 +64,41 @@
 <body>
 	<div class="ui-guide">
 		<h1>Form</h1>
-		<p>Radio</p>
+		<p>Toggle</p>
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Default</h2>
+				<h2>Text Position</h2>
 				<dl>
 					<dt></dt>
 					<dd>
-						<div class="inp inp-large">
+						<div class="inp inp-toggle">
 							<label>
-								<input type="radio" name="rad001">
-								<span class="label-title">텍스트를 입력해주세요</span>
+								<span class="label-title">레이블</span>
+								<input type="checkbox">
 							</label>
 						</div>
-						<div class="inp inp-large">
+					</dd>
+					<dd>
+						<div class="inp inp-toggle">
 							<label>
-								<input type="radio" name="rad001">
-								<span class="label-title">텍스트를 입력해주세요</span>
+								<input type="checkbox">
+								<span class="label-title">레이블</span>
+							</label>
+						</div>
+					</dd>
+					<dd>
+						<div class="inp inp-toggle">
+							<label>
+								<span class="label-title">레이블</span>
+								<input type="checkbox">
+								<span class="label-title">레이블</span>
 							</label>
 						</div>
 					</dd>
 				</dl>
 			</div>
 			<hr>
-			<div class="ui-guide-box">
-				<h2>Tab</h2>
-				<dl>
-					<dt>Two Tabs</dt>
-					<dd>
-						<div class="inp inp-tab">
-							<input type="radio" name="rad002" aria-label="텍스트">
-							<input type="radio" name="rad002" aria-label="텍스트">
-						</div>
-					</dd>
-				</dl>
-				<dl>
-					<dt>Three Tabs</dt>
-					<dd>
-						<div class="inp inp-tab">
-							<input type="radio" name="rad003" aria-label="텍스트">
-							<input type="radio" name="rad003" aria-label="텍스트">
-							<input type="radio" name="rad003" aria-label="텍스트">
-							<input type="radio" name="rad003" aria-label="텍스트">
-							<input type="radio" name="rad003" aria-label="텍스트">
-						</div>
-					</dd>
-				</dl>
-			</div>
 		</div>
 	</div>
 </body>
