--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -28,7 +28,7 @@
 	<link rel="stylesheet" href="../../assets/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
-     
+
 	<script src="../../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -64,40 +64,13 @@
 
 <body>
 	<div class="ui-guide">
-		<h1>Form</h1>
-		<p>Toggle</p>
+		<h1>Alert</h1>
+		<p>Modal Popup</p>
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Text Position</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp inp-toggle">
-							<label>
-								<span class="label-title">레이블</span>
-								<input type="checkbox">
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-toggle">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">레이블</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-toggle">
-							<label>
-								<span class="label-title">레이블</span>
-								<input type="checkbox">
-								<span class="label-title">레이블</span>
-							</label>
-						</div>
-					</dd>
-				</dl>
+				<h2>Default</h2>
+
 			</div>
 		</div>
 	</div>
