--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -2,18 +2,13 @@
 
 /* body */
 body,
-.modal__content main {background-color:var(--gray100);}
-html:has(.micromodal-slide.modal.is-open) {overflow-y:hidden;}
+.modal__content main {}
 
 /* header */
-header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);background-color:var(--white);}
-.main-header {position:relative;display:flex;align-items:center;justify-content:space-between;padding:10px 16px;}
-.main-header .left,
-.main-header .right {position:absolute;display:flex;align-items:center;justify-content:center;gap:10px;}
-.main-header .left {left:16px;}
-.main-header .right {right:16px;}
+header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);background-color:var(--white-100);}
+.main-header {position:relative;display:flex;align-items:center;justify-content:space-between;padding:0 54px 0 60px;}
 .main-header .center {display:flex;flex:1 1 100%;justify-content:center;padding:0 60px;}
-.main-header .center h1 {height:40px;line-height:40px;font-size:18px;font-weight:700;color:var(--black);
+.main-header .center h1 {line-height:52px;font-size:16px;font-weight:700;color:var(--typography-title);
     display:-webkit-inline-box !important;
     -webkit-box-orient:vertical !important;
     overflow:hidden !important;
@@ -27,6 +22,16 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .main-header .logo a, 
 .main-header .logo picture {display:flex;}
 .main-header .logo a {height:inherit;align-items:center;justify-content:center;}
+
+.main-header .left,
+.main-header .right {position:absolute;display:flex;align-items:center;justify-content:center;}
+.main-header .left {left:8px;}
+.main-header .right {right:12px;}
+
+.main-header .header-btn {flex:0 0 40px;width:40px;height:52px;display:flex;align-items:center;justify-content:center;}
+.header-btn i {flex:0 0 24px;width:24px;height:24px;}
+.header-btn .i-back {background:url(../images/header/ico_back_24_bk.svg) center center / contain no-repeat;}
+.header-btn .i-menu {background:url(../images/header/ico_menu_24_bk.svg) center center / contain no-repeat;}
 
 /* main */
 main {position:relative;min-height:100vh;}
