--- a/assets/css/ui-style.css
+++ b/assets/css/ui-style.css
@@ -268,7 +268,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 
 /* nodata */
-.nodata {display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;height:100vh;font-size:16px;font-weight:700;}
+.nodata {display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;height:100%;font-size:16px;font-weight:700;}
 .nodata:before strong {margin-top:24px;}
 .nodata span {font-size:16px;color:#666;margin-top:14px;}
 
