--- a/html/components/component_layout.html
+++ b/html/components/component_layout.html
@@ -28,7 +28,6 @@
 	<link rel="stylesheet" href="../../assets/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
-
 	<script src="../../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -47,6 +46,7 @@
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
 	<!-- //[plugins] -->
 
+	<!-- ui source -->
 	<link rel="stylesheet" href="../../assets/css/ui-fonts.css">
 	<link rel="stylesheet" href="../../assets/css/ui-variable.css">
 	<link rel="stylesheet" href="../../assets/css/ui-default.css">
@@ -54,42 +54,54 @@
 	<link rel="stylesheet" href="../../assets/css/ui-style.css">
 	<link rel="stylesheet" href="../../assets/css/ui-content.css">
 	<link rel="stylesheet" href="../../assets/css/ui-plugins.css">
-	<link rel="stylesheet" href="../../assets/css/ui-guide.css">
 
 	<script src="../../assets/js/ui-script.js"></script>
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
-	<style>
-		body {
-			background-color: var(--surface-surface100);
-		}
-	</style>
 </head>
 
 <body>
-	<!-- wrap -->
-	<div id="wrap">
-		<main>
-			<header>
-				<div class="main-header">
-					<div class="left">
-                        <button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
-					</div>
-					<div class="center">
-						<h1>내 명함 공유</h1>
-					</div>
-					<div class="right">
-                        <button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
-					</div>
+
+	<!-- main -->
+	<main>
+		<!-- header -->
+		<header>
+			<div class="main-header">
+				<div class="left">
+					<button type="button" class="btn-ico" aria-label=""></button>
 				</div>
-			</header>
+				<div class="center">
+					<h1>Layout</h1>
+				</div>
+				<div class="right">
+					<button type="button" class="btn-ico" aria-label="전체메뉴"></button>
+				</div>
+			</div>
+		</header>
+		<!-- //header -->
 
-		</main>
-	</div>
-	<!-- //wrap -->
+		<!-- main-inner -->
+		<!-- content start -->
+		<div class="main-inner">
+
+
+			<div class="nodata">내용이 없습니다.</div>
+		</div>
+		<!-- //content end -->
+		<!-- //main-inner -->
 
 
 
+		<!-- bottom-btn -->
+		<div class="bottom-btn">
+			<div class="btn-wrap">
+				<button type="button" class="btn-large btn-primary">고객 명함 등록</button>
+			</div>
+		</div>
+		<!-- //bottom-btn -->
+
+	</main>
+	<!-- main -->
 </body>
 
 </html>
